# robot-mezun

./: .gitignore
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/kuka_kr6_moveit/share/kuka_kr6_moveit/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/kuka_kr6_moveit/share/kuka_kr6_moveit/cmake/: kuka_kr6_moveitConfig-version.cmake  kuka_kr6_moveitConfig.cmake
install/kuka_kr6_moveit/share/kuka_kr6_moveit/config/: joint_limits.yaml  kuka_kr6.srdf  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml
install/kuka_kr6_moveit/share/kuka_kr6_moveit/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
src/install/: local_setup.sh  setup.sh
src/kuka_kr6_description/: CMakeLists.txt
src/kuka_kr6_description/config/: ros2_controllers.yaml  ros2_controllers_old_backup.yaml
src/kuka_kr6_description/launch/: display.launch.py
src/kuka_kr6_description/urdf/: kuka_kr6.ros2_control.xacro  kuka_kr6.urdf.xacro  wsg_gripper.urdf.xacro
src/kuka_kr6_gazebo/: CMakeLists.txt
src/kuka_kr6_gazebo/worlds/: empty.sdf
src/kuka_kr6_moveit/: .setup_assistant  CMakeLists.txt
src/kuka_kr6_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  kuka_kr6r900sixx.ros2_control.xacro  kuka_kr6r900sixx.srdf  kuka_kr6r900sixx.urdf.xacro  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
src/kuka_kr6_moveit/launch/: demo.launch.py  move_group.launch.py  moveit.launch.py  moveit_rviz.launch.py  rsp.launch.py  (+4 more)
src/log/: latest_build
(+98 files in other folders)
